--- a/src/App.css
+++ b/src/App.css
@@ -152,4 +152,6 @@ button {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    font-weight: normal;
+    font-size: 1em;
 }
