--- a/src/App.css
+++ b/src/App.css
@@ -61,12 +61,15 @@ button {
 @keyframes glowing {
     0% {
         background: #ff6200;
+        transform: scale(1.0);
     }
     50% {
         background: #ffbb00;
+        transform: scale(1.1);
     }
     100% {
         background: #ff6200;
+        transform: scale(1.0);
     }
 }
 
@@ -99,7 +102,7 @@ button {
     opacity: 0.2;
 }
 
-.players {
+.launch .players {
     font-size: 0.25em;
     width: 80%;
     margin: 0 auto;
@@ -109,7 +112,7 @@ button {
     font-size: 1em;
 }
 
-.players header {
+.launch .players header {
     margin-bottom: 0.5em;
     display: flex;
     justify-content: left;
@@ -117,13 +120,13 @@ button {
     align-items: left;
 }
 
-.players h1 {
+.launch .players h1 {
     padding: 0;
     margin: 0;
     font-size: 1.5em;
 }
 
-.players h3 {
+.launch .players h3 {
     font-size: 0.5em;
     padding: 0;
     margin: 0;
@@ -131,7 +134,7 @@ button {
     font-weight: normal;
 }
 
-.players .players-grid {
+.launch .players .players-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
@@ -140,7 +143,7 @@ button {
     font-size: 0.75em;
 }
 
-.players .players-grid .player {
+.player {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -154,4 +157,91 @@ button {
     white-space: nowrap;
     font-weight: normal;
     font-size: 1em;
+}
+
+.round-info {
+    min-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+    justify-content: space-around;
+
+    flex: 1em;
+}
+
+.round-info .topic-parent {
+    text-align: center;
+    padding: 0.5em;
+}
+
+.round-info .topic-title {
+    opacity: 0.8;
+    padding: 0.5em;
+    font-size: 0.8em;
+}
+
+.round-info .topic {
+    font-size: 2.0em;
+}
+
+.round-info .letter {
+    font-size: 13em;
+    padding: 0.1em;
+    margin: 0;
+    text-shadow: 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.bounce {
+    animation: scale infinite 3s;
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(1.0);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1.0);
+    }
+}
+
+.game {
+}
+
+.game .players {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(0, 0, 0, 0.1);
+    width: 100vw;
+
+    margin-top: auto;
+
+    padding-bottom: 1em;
+}
+
+.game .players header {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    opacity: 0.8;
+}
+
+.game .players-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+    color: #576cf5;
+    font-size: 0.75em;
+}
+
+.game .player {
+    font-weight: bold;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
