--- a/src/App.css
+++ b/src/App.css
@@ -185,11 +185,51 @@ button {
     font-size: 2.0em;
 }
 
+.round-info .letter-wrapper {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    font-size: 5em;
+    font-weight: bold;
+    text-shadow: 0px 5px rgba(0, 0, 0, 0.1);
+}
+
 .round-info .letter {
-    font-size: 13em;
-    padding: 0.1em;
+    font-size: 2em;
+    padding: 0em;
     margin: 0;
     text-shadow: 0px 5px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+}
+
+.round-info .round-bottom {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+
+    min-width: 70vw;
+}
+
+.round-bottom button {
+    font-size: 0.7em;
+    width: auto;
+    min-width: 0vw;
+    margin: 0 auto;
+    padding: 0.5em;
+    background: none;
+    color: white;
+    opacity: 0.8;
+    box-shadow: none;
+    text-decoration: underline;
+    font-weight: normal;
+}
+
+.round-bottom button:disabled {
+    opacity: 0.1;
+    color: black;
 }
 
 .bounce {
