--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@
     align-items: center;
     justify-content: center;
 
-    background: linear-gradient(to right bottom, #566bf4, #374ac5);
     color: rgb(253, 253, 253);
     overflow: hidden;
 }
@@ -50,7 +49,7 @@ button {
     padding: 0.25em;
     border-radius: 10px;
     font-weight: bold;
-    min-width: 40vh;
+    min-width: 40vw;
     box-shadow: 0px 2px rgba(0, 0, 0, 0.1);
     transition: all 0.25s;
     transform: scale(1.0);
@@ -164,7 +163,7 @@ button:active {
     min-width: 0;
     overflow: hidden;
     font-weight: normal !important;
-    font-size: 1em;
+    font-size: 0.8em;
 
     font-weight: bold;
     margin: 10px;
@@ -199,7 +198,6 @@ button:active {
 }
 
 .round-info .letter-wrapper {
-    height: 50vh;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -210,7 +208,7 @@ button:active {
 }
 
 .round-info .letter {
-    font-size: 2em;
+    font-size: 2.0em;
     padding: 0em;
     margin: 0;
     text-shadow: 0px 5px rgba(0, 0, 0, 0.1);
@@ -284,7 +282,7 @@ button:active {
     padding: 0;
     padding-bottom: 1em;
 
-    width: 100vw;
+    width: 100%;
     margin: auto auto;
 }
 
