--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-size: 2.5vw;
+
+  background: linear-gradient(to right bottom, #566bf4, #374ac5);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (orientation: landscape) {
+  body {
+    font-size: 0.75vw;
+  }
+  .page {
+    max-width: 70vw;
+    margin: 0 auto;
+  }
 }
