--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ table {
 	border-spacing: 0;
 }
 
-body {
+html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -51,6 +51,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   font-size: 2.5vw;
+
+  max-width: 100vw;
+  max-height: 100vh;
 
   background: linear-gradient(to right bottom, #566bf4, #374ac5);
 }
@@ -63,6 +66,7 @@ code {
 @media (orientation: landscape) {
   body {
     font-size: 0.75vw;
+    overflow: hidden;
   }
   .page {
     max-width: 70vw;
