--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ html, body {
   max-width: 100vw;
   max-height: 100vh;
 
-  background: linear-gradient(to right bottom, #566bf4, #374ac5);
+  background: linear-gradient(to right bottom, #6d80ff, #126ca0);
 }
 
 code {
